--- a/localisation/FMU_l_english.yml
+++ b/localisation/FMU_l_english.yml
@@ -120,7 +120,7 @@
  FMU_develop_west_coast_desc:1 "Prosperity is based on work, and our people must have employment. Government investment into private industries can ensure that."
  FMU_develop_east_coast:1 "Develop the Eastern Coastal Provinces"
  FMU_develop_east_coast_desc:1 "Even though the east is home to some of our larger cities it lags far behind the west in production capabilities. We must improve this with judicious government investment."
- FMU_blauwasser_shipping_lanes:1 "The Blauwasser Shipping Lanes"
+ FMU_blauwasser_shipping_lanes:1 "Blauwasser Shipping Lanes"
  FMU_blauwasser_shipping_lanes_desc:1 "The time has come for us to once again assert our control over our home waters. To this end we will create small naval bases which will allow our projection of power."
  FMU_national_dev_campaign:1 "National Development Campaign"
  FMU_national_dev_campaign_desc:1 "To end our economic suffering we must bolster the economy. Much like America's huge public works projects, we believe that our own nation could benefit in the same way."
@@ -146,7 +146,7 @@
  FMU_kings_university_desc:1 "Our Kaiser has graciously created an endowment of land and capital which will provide the finest education on the continent and eventually the finest in the world. By partnering with private companies we can further accelerate the university's growth and impact."
  FMU_national_university:1 "National University"
  FMU_national_university_desc:1 "Nowhere is there a people as industrious and inventive as the Blaudeutsch. We must provide a university, and eventually a whole network of universities, to keep our technological edge in this world. By partnering with private companies we can further accelerate the university's growth and impact."
- FMU_peoples_university:1 "The Peoples University"
+ FMU_peoples_university:1 "Peoples University"
  FMU_peoples_university_desc:1 "The workers must have not only basic education, but there should be a strong research arm to our nation. The brilliance of our People should be given a place to shine!"
  FMU_national_research_dev:1 "National R&D Foundation"
  FMU_national_research_dev_desc:1 "To ensure our technological supremacy we will reorganize the Civil Works Research Administration into a new department, responsible for multiple research and development tasks, and well integrated with our university research labs."
@@ -184,7 +184,7 @@
  FMU_reform_voting_laws_desc:1 "\"What right does a man who owns nothing, not even the ground he stands on, to direct the affairs of this nation? None, I say!\" - Erich von Liebestein, Rep. of Edwardsberg"
  FMU_new_constitution:1 "A New Constitution"
  FMU_new_constitution_desc:1 "The ideals espoused by our grandfathers during the revolution were sufficient to the time, but they no longer apply to a modern state such as ours. We have grown beyond that first Constitution and now we must rewrite it for the good of the nation."
- FMU_strengthen_central:1 "Strengthen the Power of the Central Government"
+ FMU_strengthen_central:1 "Strengthen Central Government"
  FMU_strengthen_central_desc:1 "A strong central leadership is necessary for the development and control of our nation. We must not let old ideas, like those from our first Constitution, poison our minds."
  FMU_ban_communists:1 "Ban the Communist Parties"
  FMU_ban_communists_desc:1 "Never shall we allow the rabble-rousers and anarchists a place in government! They have no place at all in our society!"
@@ -272,8 +272,10 @@
  FMU_surface_fleet_focus_desc:0 "Our navy was insufficient during the Great War. This allowed our enemies to bring destruction to our shores. We shall not let that happen again."
  FMU_strike_fleets:0 "Strike Fleets"
  FMU_strike_fleets_desc:0 "Smaller, more mobile groups of ships with fewer capital ships is our best plan for our naval national defense."
+ FMU_strike_fleets_tt:0 "Strike Fleets"
  FMU_theater_groups:0 "Theater Groups"
  FMU_theater_groups_desc:0 "A focus on capital ship formations which emphasizes coordination and massive firepower will keep our enemies at bay and our nation safe."
+ FMU_theater_groups_tt:0 "We will convert our 3 battleship hulls in consturcution to carriers."
  FMU_uboat_docks:0 "Uboat Dockyards"
  FMU_uboat_docks_desc:0 "We should expand our dock capacity to house and coordinate our Uboat fleets"
  FMU_clause_b:0 "Clause B"
