--- a/localisation/FMU_l_english.yml
+++ b/localisation/FMU_l_english.yml
@@ -270,14 +270,14 @@
  FMU_control_shipping_desc:0 "The Great War demonstrated the utility of U-boats for projecting control over our enemies’ supply lines"
  FMU_surface_fleet_focus:0 "Surface Fleet Focus"
  FMU_surface_fleet_focus_desc:0 "Our navy was insufficient during the Great War. This allowed our enemies to bring destruction to our shores. We shall not let that happen again."
- FMU_strike_fleets:0 "Strike Fleets"
- FMU_strike_fleets_desc:0 "Smaller, more mobile groups of ships with fewer capital ships is our best plan for our naval national defense."
- FMU_strike_fleets_tt:0 "Strike Fleets"
- FMU_theater_groups:0 "Theater Groups"
- FMU_theater_groups_desc:0 "A focus on capital ship formations which emphasizes coordination and massive firepower will keep our enemies at bay and our nation safe."
- FMU_theater_groups_tt:0 "We will convert our 3 battleship hulls in consturcution to carriers."
- FMU_uboat_docks:0 "Uboat Dockyards"
- FMU_uboat_docks_desc:0 "We should expand our dock capacity to house and coordinate our Uboat fleets"
+ FMU_strike_fleets:0 "§5Strike Groups§!"
+ FMU_strike_fleets_desc:0 "Smaller, more mobile groups of ships with massive firepower is our best plan for our naval national defense."
+ FMU_strike_fleets_tt:0 "§5We will approve our 3 battleship hulls to continue their consturcution.§!"
+ FMU_theater_groups:0 "§5Theater Fleets§!"
+ FMU_theater_groups_desc:0 "A focus on capital ship formations which emphasizes coordination and airpower will keep our enemies at bay and our nation safe."
+ FMU_theater_groups_tt:0 "§5We will convert our 3 battleship hulls under consturcution in to carriers.§!"
+ FMU_uboat_docks:0 "Underground Dockyards"
+ FMU_uboat_docks_desc:0 "We should expand our dock capacity to produce and house our fleets."
  FMU_clause_b:0 "Clause B"
  FMU_clause_b_desc:0 "Authorizing the establishment of training camps and military bases to house troops and materiel for national defense."
  FMU_addendum_9f:0 "Addendum 9f: the Luftverteidigungsstreitkräfte"
