Updated Generic Tree

--- a/localisation/replace/focus_l_english.yml
+++ b/localisation/replace/focus_l_english.yml
@@ -19,3 +19,21 @@
  USA_war_plan_black:0 "War Plan Black"
  USA_war_plan_black_desc:0 "It's plain to see that Germany and The Frestaaters of Mu politics and expansionism goes far beyond any measure of sanity. They must be stopped before their war machine reaches the point of no return."
  southern_expansion_focus_desc:0 "The Southern Expansion Doctrine, favored by the Imperial Navy, dictates that Japan must expand south into Southeast Asia, the Northwestern Austral and the Pacific. The rich colonies of the European powers have resources critical to Japanese industry, but this path will lead to conflict with the United States. A preemptive strike is in order."
+ monarchism_ethos:0 "Monarchism Ethos"
+ monarchism_ethos_desc:0 "The world is too dangerous to allow the ideologies of the common man to run rampant in government. We must once again centralize government in the hands of the few in order to protect our nation."
+ strongman_focus:0 "Strongman"
+ strongman_focus_desc:0 "One people, one leader. Too many leaders will divide the efforts of our nation and introduce dissention, when our national unity is the only thing that should be important to us."
+ loyal_subordinates:0 "Loyal Subordinates"
+ loyal_subordinates_desc:0 "Our leader, in their wisdom, may choose to delegate authority to trusted and loyal subordinates who will fulfill their will for the good of our people."
+ streamlined_economy:0 "Streamlined Economy"
+ streamlined_economy_desc:0 "As our society changes to meet the needs of its leader there are going to be tangible benefits for all, including an economy that serves the good of the nation and the good of the people."
+ all_for_our_leader:0 "All For Our Leader"
+ all_for_our_leader_desc:0 "As society focuses its efforts on fulfilling our leader's vision we shall all benefit and live in harmony."
+ feudal_focus:0 "Feudalism"
+ feudal_focus_desc:0 "No single leader can controll all aspects of a society, he or she must divide the governance with other strong leaders who will pledge their undying fealty."
+ ties_that_bind:0 "Ties That Bind"
+ ties_that_bind_desc:0 "As the feudal lords are tied to our monarch, so are the people in turn tied to their lords."
+ social_hierarchy:0 "Social Hierarchy"
+ social_hierarchy_desc:0 "The increased order in our society has allowed many improvements, but most especially in the martial sphere, with the feudal lords providing a levy of trained troops to the nation."
+ predictable_society:0 "Predictable Society"
+ predictable_society_desc:0 "The serf, the freeman, the lower Lords, the Feudal Lords and our Monarch all exist in a predictable and stable system. With each passing day this system will help us to strengthen and enrichen our nation."
