--- a/localisation/aml_state_names_l_english.yml
+++ b/localisation/aml_state_names_l_english.yml
@@ -329,7 +329,7 @@
  STATE_1156:0 "Arrowhead Islands"
  STATE_1157:0 "Scotia Archipelago"
  STATE_1158:0 "Storfisk Islands"
- STATE_1159:0 "Nouvelle Occitanie" #Needs new name
+ STATE_1159:0 "Terre de Chanson"
  STATE_1160:0 "Val Islands"
  STATE_1161:0 "Balteos Islands"
  STATE_1162:0 "Flueflekk Islands"
@@ -342,6 +342,6 @@
  STATE_1169:0 "Mayda"
  STATE_1170:0 "Rodrigo"
  STATE_1171:0 "Sannikov island"
- STATE_1172:0 "Occtaine new name"
- STATE_1173:0 "Occtaine new name"
- STATE_1174:0 "Occtaine new name"
+ STATE_1172:0 "Pays des Fjords" 
+ STATE_1173:0 "Montglaciale" 
+ STATE_1174:0 "Mecafarie"
