--- a/localisation/replace/aml_loading_tips_l_english.yml
+++ b/localisation/replace/aml_loading_tips_l_english.yml
@@ -73,4 +73,4 @@
  LOADING_TIP_73:0 "\"Africa is burning! All of Britain's possessions are in danger of the hellfire stoked by that demon Roderiq!\"\n - Godfrey Huggins, Prime Minister of Rhodesia and Nyasaland."
  LOADING_TIP_74:0 "\"If the British are oppressing us then our right to revolution is inherent! Parliament has threatened our property, our life, and are taking away our rights as citizens. They have made the choice for us. Victory, or the conditions imposed by the conqueror, must be the result.\"\n - Werreurbro Revolutionary Council"
  LOADING_TIP_75:0 "\"I don't think the Trinsuyinese get it; they can't leave now. Do they really think that we would let them escape?\"\n - Admiral Frank Jack Fletcher, US 2nd Battle of Midway"
- LOADING_TIP_76:0 "\"Every one of the great powers will continue to expand until its reach is greater than its grip” \"\n -Victor Ceñiza de Espinoza, Rio Grandense Congressman"
+ LOADING_TIP_76:0 "\"Every one of the great powers will continue to expand until its reach is greater than its grip.\"\n -Victor Ceñiza de Espinoza, Rio Grandense Congressman"
