--- a/localisation/aml_game_rules_l_english.yml
+++ b/localisation/aml_game_rules_l_english.yml
@@ -9,7 +9,7 @@
  MUU_AI_BEHAVIOR:0 "@MUU Federal Republic of Mu"
  FMU_AI_BEHAVIOR:0 "@FMU Freistaat von Mu"
  PRJ_AI_BEHAVIOR:0 "@PRJ Kingdom of Yohannia"
-
+ HOU_AI_BEHAVIOR:0 "@HOU Republic of Houpo'e"
 
  #Atlantis Rules
  RULE_OPTION_COMMUNIST_ATL_AI_DESC:0 "Atlantis will try to reform itself into a communist state and ally itself with the Soviet Union or another major Communist State"
@@ -39,3 +39,15 @@
  RULE_OPTION_PRJ_INTERVENE_AI_DESC:0 "Yohannia will save Ethiopia from the Italians and prevent further african incursions"
  RULE_OPTION_PRJ_PUPPET_ETHIOPIA:0 "Save Ethiopia Alternate"
  RULE_OPTION_PRJ_PUPPET_ETHIOPIA_AI_DESC:0 "Yohannia will save Ethiopia from the Italians and have Ethiopia submit to Yohannian interests"
+ 
+ #HOUPO"E Rules
+ HOU_AI_RANDOM_HISTORICAL:0 "Historical"
+ RULE_HISTORICAL_HOU_AI_DESC:0 "Houpo'e will prolonge the collapse of their government to communists while fighting japan"
+ HOU_AI_RANDOM_FASCIST:0 "Fascism"
+ RULE_FASCIST_HOU_AI_DESC:0 "Houpo'e will try to flip fascists and eat its neighbors"
+ HOU_AI_RANDOM_COMMUNIST_TROTSKY:0 "Troskiest Houpo'e"
+ RULE_OPTION_PRJ_PUPPET_ETHIOPIA_AI_DESC:0 "Trotskiest Houpe Desc"
+ HOU_AI_RANDOM_COMMUNIST_STALIN:0 "Stalinst Houpo'e"
+ RULE_COMMUNIST_STALIN_HOU_AI_DESC:0 "Stalanist Houpo'e Desc"
+ HOU_AI_RANDOM_COMMUNIST_HOME_GROWN:0 "Native Communism"
+ RULE_COMMUNIST_HOME_GROWN_HOU_AI_DESC:0 "HOmegrown Communism Desc"
