--- a/localisation/aml_game_rules_l_english.yml
+++ b/localisation/aml_game_rules_l_english.yml
@@ -26,7 +26,7 @@
  RULE_MONARCHIST_MUU_AI_DESC:0 "The Federal Republic of Muu will attempt to restore its king and avoid taking part in future wars."
  RULE_FASCIST_MUU_AI_DESC:0 "Fasci Descriptor soon"
 
- #Blue Mu Rules
+ #Blue Mu Rules NONE OF THIS WORKS
  RULE_OPTION_COMMUNIST_FMU_AI_DESC:0 "Commie Descriptor soon"
  RULE_OPTION_DEMOCRATIC_FMU_AI_DESC:0 "Democrat Descripter soon"
  RULE_OPTION_FMU_HISTORICAL:0 "Fascist"
@@ -46,8 +46,8 @@
  HOU_AI_RANDOM_FASCIST:0 "Fascism"
  RULE_FASCIST_HOU_AI_DESC:0 "Houpo'e will try to flip fascists and eat its neighbors"
  HOU_AI_RANDOM_COMMUNIST_TROTSKY:0 "Troskiest Houpo'e"
- RULE_OPTION_PRJ_PUPPET_ETHIOPIA_AI_DESC:0 "Trotskiest Houpe Desc"
+ RULE_COMMUNIST_TROTSKY_HOU_AI_DESC:0 "Houpo'e will follow a form of Trotskism to export the revolution worldwide. "
  HOU_AI_RANDOM_COMMUNIST_STALIN:0 "Stalinst Houpo'e"
- RULE_COMMUNIST_STALIN_HOU_AI_DESC:0 "Stalanist Houpo'e Desc"
+ RULE_COMMUNIST_STALIN_HOU_AI_DESC:0 "Houpo'e will follow stalins method of efficient communism."
  HOU_AI_RANDOM_COMMUNIST_HOME_GROWN:0 "Native Communism"
- RULE_COMMUNIST_HOME_GROWN_HOU_AI_DESC:0 "HOmegrown Communism Desc"
+ RULE_COMMUNIST_HOME_GROWN_HOU_AI_DESC:0 "Houpean cultural values supersead the global workers collective."
