--- a/localisation/aml_game_rules_l_english.yml
+++ b/localisation/aml_game_rules_l_english.yml
@@ -42,12 +42,12 @@
  
  #HOUPO"E Rules
  HOU_AI_RANDOM_HISTORICAL:0 "Historical"
- RULE_HISTORICAL_HOU_AI_DESC:0 "Houpo'e will prolonge the collapse of their government to communists while fighting japan"
+ RULE_HISTORICAL_HOU_AI_DESC:0 "Houpo'e will prolong the collapse of their government to communists while fighting Japan."
  HOU_AI_RANDOM_FASCIST:0 "Fascism"
- RULE_FASCIST_HOU_AI_DESC:0 "Houpo'e will try to flip fascists and eat its neighbors"
- HOU_AI_RANDOM_COMMUNIST_TROTSKY:0 "Troskiest Houpo'e"
- RULE_COMMUNIST_TROTSKY_HOU_AI_DESC:0 "Houpo'e will follow a form of Trotskism to export the revolution worldwide. "
+ RULE_FASCIST_HOU_AI_DESC:0 "Houpo'e will work towards a fascist governemnt and will try to capitulate its neighbors."
+ HOU_AI_RANDOM_COMMUNIST_TROTSKY:0 "Troskyite Houpo'e"
+ RULE_COMMUNIST_TROTSKY_HOU_AI_DESC:0 "Houpo'e will follow a form of Trotskyism to export the revolution worldwide."
  HOU_AI_RANDOM_COMMUNIST_STALIN:0 "Stalinst Houpo'e"
- RULE_COMMUNIST_STALIN_HOU_AI_DESC:0 "Houpo'e will follow stalins method of efficient communism."
+ RULE_COMMUNIST_STALIN_HOU_AI_DESC:0 "Houpo'e will follow Stalin's methods for efficient Communism."
  HOU_AI_RANDOM_COMMUNIST_HOME_GROWN:0 "Native Communism"
- RULE_COMMUNIST_HOME_GROWN_HOU_AI_DESC:0 "Houpean cultural values supersead the global workers collective."
+ RULE_COMMUNIST_HOME_GROWN_HOU_AI_DESC:0 "Houpean cultural values supersede the European Communist ideals as a basis for the global workers collective."
