--- a/localisation/replace/aml_countries_l_english.yml
+++ b/localisation/replace/aml_countries_l_english.yml
@@ -718,8 +718,8 @@
  ZIM_monarchism_ADJ:0 "Zimbabwean"
  NOC_fascism:0 "Occitania"
  NOC_fascism_DEF:0 "Occitania"
- NOC_democratic:0 "Republic of New Occitania"
- NOC_democratic_DEF:0 "Republic of Occitania"
+ NOC_democratic:0 "Confederacy of New Occitania"
+ NOC_democratic_DEF:0 "the Confederacy of New Occitania"
  NOC_neutrality:0 "Occitanie"
  NOC_neutrality_DEF:0 "Occitanie de Sud"
  NOC_monarchism:0 "Kingdom of Occitanie"
