--- a/localisation/replace/aml_countries_l_english.yml
+++ b/localisation/replace/aml_countries_l_english.yml
@@ -2013,12 +2013,12 @@
  KKA_communism_DEF:0 "the Peoples Republic of Kumarikkandam"
  KKA_islamist:0 "Kandam Islamic State"
  KKA_islamist_DEF:0 "the Kandam Islamic State"
- KKA_mandalist:0 "Kumarikkandam"
- KKA_mandalist_DEF:0 "the Kumarikkandam"
+ KKA_mandalism:0 "Kumarikkandam"
+ KKA_mandalism_DEF:0 "the Kumarikkandam"
  KKA_fascism_ADJ:0 "Kandam"
  KKA_democratic_ADJ:0 "Kandam"
  KKA_neutrality_ADJ:0 "Kandam"
  KKA_communism_ADJ:0 "Kandam"
  KKA_monarchism_ADJ:0 "Kandam"
- KKA_mandalist_ADJ:0 "Kandam"
+ KKA_mandalism_ADJ:0 "Kandam"
  KKA_islamist_ADJ:0 "Kandam"
