--- a/localisation/aml_game_rules_l_english.yml
+++ b/localisation/aml_game_rules_l_english.yml
@@ -27,11 +27,16 @@
  RULE_FASCIST_MUU_AI_DESC:0 "Fasci Descriptor soon"
 
  #Blue Mu Rules NONE OF THIS WORKS
- RULE_OPTION_COMMUNIST_FMU_AI_DESC:0 "Commie Descriptor soon"
- RULE_OPTION_DEMOCRATIC_FMU_AI_DESC:0 "Democrat Descripter soon"
- RULE_OPTION_FMU_HISTORICAL:0 "Fascist"
- RULE_HISTORICAL_FMU_AI_DESC:0 "The Friestaat of Muu will attempt to flip fascist and join the Axis"
+ RULE_OPTION_SOVIET_COMMUNIST:0 "Soviet Communism"
+ RULE_OPTION_SOVIET_COMMUNIST_FMU_AI_DESC:0 "The Friestaat of Muu will try to install soviet style communism"
+ RULE_OPTION_MUAN_COMMUNIST:0 "Muan Communism"
+ RULE_OPTION_MUAN_COMMUNIST_FMU_AI_DESC:0 "The Friestaat of Muu will try to install Muan style communism"
  
+ RULE_MONARCHIST_FMU_AI_DESC:0 "The Friestaat of Muu will try to reinstall their King"
+ RULE_DEMOCRATIC_FMU_AI_DESC:0 "The Friestaat of Muu will continue to reform its democracy"
+ RULE_OPTION_FMU_HISTORICAL:0 "Fascist"
+ RULE_HISTORICAL_FMU_AI_DESC:0 "The Friestaat of Muu will flip fascist and join the Axis on the High Seas"
+ RULE_FASCIST_ALTERNATE_FMU_AI_DESC:0 "The Friestaat of Muu will flip fascist and join the Axis and invade across the Muan Continent"
  #Prester John Rules
  RULE_OPTION_PRJ_HISTORICAL:0 "Abandon Ethiopia"
  RULE_OPTION_PRJ_HISTORICAL_AI_DESC:0 "Yohannia will abandon Ethiopia to the Italians"
