--- a/localisation/PRJ_l_english.yml
+++ b/localisation/PRJ_l_english.yml
@@ -85,7 +85,7 @@
  PRJ_the_mausoleum_desc:0 "We must finish King Otto's Mausoleum so that we can properly honor his memory. A man of such stature and importance requires a fitting memorial."
  PRJ_kings_vendetta:0 "Roderiq's War"
  PRJ_kings_vendetta_desc:0 "With the European powers currently busy killing each other in Europe, King Roderiq has made it clear that this is our chance to free the rest of Africa from their subjugation and reclaim our own lost territory. Africa's destiny is in Roderiq's hands."
- PRJ_warrior_king:0 "Warrior King"
+ PRJ_warrior_king:0 "§tWarrior King§!"
  PRJ_warrior_king_desc:0 "The King will prove his mettle: He has joined his fellow soldiers on the frontlines!" #need to seperate joining army to add here
  PRJ_faith_and_arms:0 "Faith and Arms"
  PRJ_faith_and_arms_desc:0 "We must believe in our King. If he believes we can go toe-to-toe with the largest empire in history then we must rise to the occasion."
