--- a/localisation/replace/aml_countries_l_english.yml
+++ b/localisation/replace/aml_countries_l_english.yml
@@ -1282,18 +1282,18 @@
  AUD_neutrality_ADJ:0 "Anglo-Lemurian"
  AUD_communism_ADJ:0 "Anglo-Lemurian"
  AUD_monarchism_ADJ:0 "Audenshyran"
- MKL_neutrality:0 "Kalari Mandalist Revolutionaries"
- MKL_neutrality_DEF:0 "Kalari Mandalist Revolutionaries"
- MKL_neutrality_ADJ:0 "Mandalist"
- MKM_neutrality:0 "Kumari Mandalist Revolutionaries"
- MKM_neutrality_DEF:0 "Kumari Mandalist Revolutionaries"
- MKM_neutrality_ADJ:0 "Mandalist"
- MCL_neutrality:0 "Cholan Mandalist Revolutionaries"
- MCL_neutrality_DEF:0 "Cholan Mandalist Revolutionaries"
- MCL_neutrality_ADJ:0 "Mandalist"
- MLS_neutrality:0 "Lasnovan Mandalist Revolutionaries"
- MLS_neutrality_DEF:0 "Lasnovan Mandalist Revolutionaries"
- MLS_neutrality_ADJ:0 "Mandalist"
+ MKL_mandalism:0 "Kalari Mandalist Revolutionaries"
+ MKL_mandalism_DEF:0 "Kalari Mandalist Revolutionaries"
+ MKL_mandalism_ADJ:0 "Mandalist"
+ MKM_mandalism:0 "Kumari Mandalist Revolutionaries"
+ MKM_mandalism_DEF:0 "Kumari Mandalist Revolutionaries"
+ MKM_mandalism_ADJ:0 "Mandalist"
+ MCL_mandalism:0 "Cholan Mandalist Revolutionaries"
+ MCL_mandalism_DEF:0 "Cholan Mandalist Revolutionaries"
+ MCL_mandalism_ADJ:0 "Mandalist"
+ MLS_mandalism:0 "Lasnovan Mandalist Revolutionaries"
+ MLS_mandalism_DEF:0 "Lasnovan Mandalist Revolutionaries"
+ MLS_mandalism_ADJ:0 "Mandalist"
  KLK_fascism:0 "Totalitarian Kalari"
  KLK_fascism_DEF:0 "Totalitarian Kalari"
  KLK_democratic:0 "Kalari"
