--- a/localisation/aml_game_rules_l_english.yml
+++ b/localisation/aml_game_rules_l_english.yml
@@ -10,6 +10,7 @@
  FMU_AI_BEHAVIOR:0 "@FMU Freistaat von Mu"
  PRJ_AI_BEHAVIOR:0 "@PRJ Kingdom of Yohannia"
  HOU_AI_BEHAVIOR:0 "@HOU Republic of Houpo'e"
+ TRS_AI_BEHAVIOR:0 "@TRS Trynsuyin"
 
  #Atlantis Rules
  RULE_OPTION_COMMUNIST_ATL_AI_DESC:0 "Atlantis will try to reform itself into a communist state and ally itself with the Soviet Union or another major Communist State"
