--- a/localisation/aml_terrain_l_english.yml
+++ b/localisation/aml_terrain_l_english.yml
@@ -2,4 +2,4 @@
  water_narrow:0 "Narrow Canals"
  water_narrow_desc:0 "Deep, narrow waterways that cage and reveal the ships that use them."
  water_arctic_ocean:0 "Polar Ocean"
- water_arctic_ocean_desc:0 "Ice flows, shifting labyrinths of ship-crushing channels, and freezing saltwater all complicate any attempts at movement here."
+ water_arctic_ocean_desc:0 "Ice floes, shifting labyrinths of ship-crushing channels, and freezing saltwater all complicate any attempts at movement here."
