--- a/localisation/FMU_l_english.yml
+++ b/localisation/FMU_l_english.yml
@@ -17,9 +17,15 @@
  FMU_refinery_concern:0 "Neue Volkswerft"
  FMU_electronics_concern:0 "Schmidt & Lange"
  FMU_industrial_concern:0 "Teuer & Tinser"
+ 
+ FMU_unternehmen_sternenmacher_idea:0 "Unternehmen Sternenmacher"
+ FMU_charmed_idea:0 "Charm Offensive"
+ FMU_velvet_glove_iron_fist_idea:0 "Velvet Glove, Iron Fist"
+ FMU_our_mighty_home_idea:0 "Supreme Homeland Defense"
+ FMU_inevitable_war:0 "Inevitable War"
 
- FMU_neutrality_party_kaiser_long:0 "House Hohenzollern"
- FMU_neutrality_party_kaiser:0 "House Hohenzollern"
+ FMU_monarchism_party_kaiser_long:0 "House Hohenzollern"
+ FMU_monarchism_party_kaiser:0 "House Hohenzollern"
  FMU_broke_versailles:0 "Rejected Treaty of Versailles"
  FMU_we_are_german:0 "Wir sind Deutsche"
  FMU_shared_heritage:0 "Shared Heritage"
