--- a/localisation/TRS_l_english.yml
+++ b/localisation/TRS_l_english.yml
@@ -186,7 +186,7 @@
  TRS_capital_ship_doctrine:1 "Capital Ship Doctrine"
  TRS_capital_ship_doctrine_desc:1 "Capital ships, with their superior armor and firepower, will be the backbone of our naval forces."
  TRS_increase_hull_size:1 "Standardized Repairs"
- TRS_increase_hull_size_desc:1 "New Desc"
+ TRS_increase_hull_size_desc:1 "All equipment should be standardized to allow for efficient and timely repairs, both in port and at sea."
  TRS_air_integration:1 "Air Integration"
  TRS_air_integration_desc:1 "By utilizing air power in combination with naval power we can extend our control of the seas many-fold."
  TRS_national_naval_arsenal:1 "National Naval Arsenal"
