KDP Lives, Strained ALliance, Probably needs better locs

--- a/localisation/HOU_l_english.yml
+++ b/localisation/HOU_l_english.yml
@@ -271,8 +271,8 @@
  HOU_not_go_quietly_desc:0 "Despite the internal pressure to declare the Communists as a legitimate government we do not believe that this is necessary. We shall fight on until the bitter end!"
  HOU_volunteers_aplenty:0 "Volunteers Aplenty"
  HOU_volunteers_aplenty_desc:0 "The Central Committee has issued a call for all men of ages who are able to rise up to protect the nation from the invaders. We expect a huge response to our call."
- HOU_abandon_kdp:0 "Abandon the KDP"
- HOU_abandon_kdp_desc:0 "With the war now turning in our favor we must align ourselves with our true ideological friends, the Soviets."
+ HOU_abandon_kdp:0 "Strained Alliance"
+ HOU_abandon_kdp_desc:0 "While the war is now turning in our favor, our neighbors are displeased at the new workers paradise we are setting up for ourselves."
  HOU_move_capital:0 "Move the Capital Inland"
  HOU_move_capital_desc:0 "To celebrate our glorious victory we will move the capital from heavily damaged Loto Aai to Wainuiomu, home of the Revolution in Houpo'e"
  HOU_perfidious_communists:0 "Perfidious Communists"
@@ -384,6 +384,10 @@
  HOU_defensive_designs:0 "Defensive Designs"
  HOU_defensive_designs_desc:0 "Place flavor text here" 
  
+ kanagan_chaos:0 "Communication Breakdown"
+ kanagan_chaos_desc:0 "The Kanagan Defense pact is under serious strain after Houpo'ean governemt collapsed and the communists took power"
+ HOU_defense_chaos:1 "Alliance Breakdown"
+ HOU_defense_chaos_desc:1 "The Kanagan Defense pact is under serious strain after Houpo'ean governemt collapsed and the communists took power"
  HOU_pure_marxism_idea:1 "Pure Marxism"
  HOU_establish_kafakafas_idea:1 "Kafakafas"
  HOU_stalinism_idea:1 "Stalinism"
