Kalari Historical Plan

--- a/localisation/KLK_l_english.yml
+++ b/localisation/KLK_l_english.yml
@@ -184,6 +184,8 @@
  KLK_military_final_2:0 "New Dockyards"
  KLK_military_final_2_desc:0 "Our admirals complain of an insufficient number of hulls to defend our nation. We must produce more to protect ourselves!"
  
+ KLK_synd_final_ai:0 "§tJoin the Kandam§"
+ KLK_synd_final_ai_desc:0 "§tTHIS WILL END YOUR GAME ITS FOR THE AI, We must join the Kandam if we hope to stand firmly against the capitalistic west.§"
  ####### ideas
  KLK_bunch_of_nice_commies:0 "Mandalism Dominant"
  KLK_bunch_of_ugly_commies:0 "Mandalism on the Rise"
