--- a/localisation/aml_game_rules_l_english.yml
+++ b/localisation/aml_game_rules_l_english.yml
@@ -11,7 +11,7 @@
  PRJ_AI_BEHAVIOR:0 "@PRJ Kingdom of Yohannia"
  HOU_AI_BEHAVIOR:0 "@HOU Republic of Houpo'e"
  TRS_AI_BEHAVIOR:0 "@TRS Trynsuyin"
-
+ KLK_AI_BEHAVIOR:0 "@KLK Kalari"
  #Atlantis Rules
  RULE_OPTION_COMMUNIST_ATL_AI_DESC:0 "Atlantis will try to reform itself into a communist state and ally itself with the Soviet Union or another major Communist State"
  RULE_OPTION_DEMOCRATIC_HISTORICAL_ATL_AI_DESC:0 "Atlantis will try to curtail the criminal underworld to join the allies and stave the rise of fascism "
@@ -57,7 +57,7 @@
  RULE_COMMUNIST_STALIN_HOU_AI_DESC:0 "Houpo'e will follow Stalin's methods for efficient Communism."
  HOU_AI_RANDOM_COMMUNIST_HOME_GROWN:0 "Native Communism"
  RULE_COMMUNIST_HOME_GROWN_HOU_AI_DESC:0 "Houpean cultural values supersede the European Communist ideals as a basis for the global workers collective."
- #HTrynsuyin Rules
+ #Trynsuyin 
  TRS_AI_RANDOM_HISTORICAL:0 "Historical"
  RULE_HISTORICAL_HOU_AI_DESC:0 "Trynsuyin will allow Japan to take over its massive financial debt in exchange for fealty to Japan"
  TRS_AI_RANDOM_FASCIST:0 "Fascism"
@@ -66,3 +66,6 @@
  RULE_OPTION_COMMUNIST_TRS_AI_DESC:0 "Trysuyin will continue its extreme spending program at the of the working class."
  TRS_AI_RANDOM_DEMOCRATIC:0 "Democratic"
  RULE_DEMOCRATIC_TRS_AI_DESC:0 "Trysuyin will continue paying down its debt by rejecting further japanese loans"
+ #Kalari and the Mandabrony
+ KLK_AI_RANDOM_HISTORICAL:0 "Historical"
+ KLK_AI_RANDOM_HISTORICAL_DESC:0 "Kalari will secumb to Mandalism and spread it across the Lemurian Continent. If Kumari falls to mandalism, Kalari will try to be absorbed into Kumari"
