--- a/localisation/BL_civil_war_l_english.yml
+++ b/localisation/BL_civil_war_l_english.yml
@@ -92,6 +92,29 @@
  blm.60.t:0 "Communists Organizing"
  blm.60.d:0 "The rumors that the worker unions were organizing to overthrow the government were true. Although the central regions are still formally controlled by our forces, in practice the region has been so violent lately that there are effectively entire cities controlled by communist militias."
  blm.60.a:0 "The storm is getting stronger"
+ 
+ blm.46.t:0 "Realease the wherreubro"
+ blm.46.d:0 "Realease the wherreubro desc"
+ blm.46.a:0 "We dont want them anyway"
+ blm.47.t:0 "Realease the aurdenshire"
+ blm.47.d:0 "Realease the aurdenshire desc"
+ blm.47.a:0 "We dont want them anyway"
+ 
+ blm.48.t:0 "Realease the Qlach"
+ blm.48.d:0 "Realease the Qlach desc"
+ blm.48.a:0 "We dont want them anyway"
+ 
+ blm.49.a:0 "We're alittle busy at the moment"
+ 
+ blm.50.t:0 "Realease the Workers of Lemuria"
+ blm.50.d:0 "Realease the Workers of Lemuria desc"
+ blm.50.a:0 "Good ridence to communists"
+ 
+ blm.51.t:0 "Realease the Free Euros of Lemuria"
+ blm.51.d:0 "Realease the Free Euros of Lemuria desc"
+ blm.51.a:0 "Good ridence to communists"
+ 
+ 
  people_pissed_off_tt:0 "Belligerent Government: $VALUE|=-%0$"
  ARCpeople_pissed_off_tt:0 "Aggressive Actions in Arcadia: $VALUE|=-%0$"
  WRBpeople_pissed_off_tt:0 "Aggressive Actions in Werreurbro: $VALUE|=-%0$"
