--- a/localisation/BL_civil_war_l_english.yml
+++ b/localisation/BL_civil_war_l_english.yml
@@ -104,7 +104,7 @@
  blm.48.d:0 "Realease the Qlach desc"
  blm.48.a:0 "We dont want them anyway"
  
- blm.49.a:0 "We're alittle busy at the moment"
+ blm.49.a:0 "We're alittle busy at the moment" #IDK where the other half is this is Kalari taking the north
  
  blm.50.t:0 "Realease the Workers of Lemuria"
  blm.50.d:0 "Realease the Workers of Lemuria desc"
