--- a/localisation/BL_civil_war_l_english.yml
+++ b/localisation/BL_civil_war_l_english.yml
@@ -93,26 +93,26 @@
  blm.60.d:0 "The rumors that the worker unions were organizing to overthrow the government were true. Although the central regions are still formally controlled by our forces, in practice the region has been so violent lately that there are effectively entire cities controlled by communist militias."
  blm.60.a:0 "The storm is getting stronger"
  
- blm.46.t:0 "Realease the wherreubro"
- blm.46.d:0 "Realease the wherreubro desc"
- blm.46.a:0 "We dont want them anyway"
- blm.47.t:0 "Realease the aurdenshire"
- blm.47.d:0 "Realease the aurdenshire desc"
- blm.47.a:0 "We dont want them anyway"
+ blm.46.t:0 "Realease Werreurbro"
+ blm.46.d:0 "The fractious French speakers in Werreurbro are sure to bring us to ruin if we try to keep them as part of our nation."
+ blm.46.a:0 "They'll destabilize us if they stay."
+ blm.47.t:0 "Realease Audenshyre"
+ blm.47.d:0 "Better to have Audenshyre as a wary neighbor than as part of a rebellion against the nation. We will permit them self-governance."
+ blm.47.a:0 "Better than war, at least."
  
- blm.48.t:0 "Realease the Qlach"
- blm.48.d:0 "Realease the Qlach desc"
- blm.48.a:0 "We dont want them anyway"
+ blm.48.t:0 "Realease Qlach"
+ blm.48.d:0 "While it is likely unadvisable to cede any territory, even territory as desolate as the Ackerson Desert, we must allow the barbarian Qlachians their freedom. To fight them would detract from the larger problems our nation is facing."
+ blm.48.a:0 "Undesireables."
  
- blm.49.a:0 "We're alittle busy at the moment" #IDK where the other half is this is Kalari taking the north
+ blm.49.a:0 "Kalari troops have seized the north." #IDK where the other half is this is Kalari taking the north
  
  blm.50.t:0 "Realease the Workers of Lemuria"
- blm.50.d:0 "Realease the Workers of Lemuria desc"
- blm.50.a:0 "Good ridence to communists"
+ blm.50.d:0 "Malcontents and anarchists the lot. We must not spend our strength trying to keep lunatics such as these within the nation."
+ blm.50.a:0 "Good riddance to bad rubbish."
  
- blm.51.t:0 "Realease the Free Euros of Lemuria"
- blm.51.d:0 "Realease the Free Euros of Lemuria desc"
- blm.51.a:0 "Good ridence to communists"
+ blm.51.t:0 "Realease the Anarchists"
+ blm.51.d:0 "Anarchy as far as the eye can see, with guns and terror tactics. We must not remain with these animals inside our borders."
+ blm.51.a:0 "Out! Out I say!"
  
  
  people_pissed_off_tt:0 "Belligerent Government: $VALUE|=-%0$"
