--- a/localisation/replace/aml_victory_points_l_english.yml
+++ b/localisation/replace/aml_victory_points_l_english.yml
@@ -183,11 +183,11 @@
  VICTORY_POINTS_14595:0 "Weyluchanao"
  VICTORY_POINTS_14590:0 "Inaluregwoi"
  VICTORY_POINTS_14725:0 "Inhumuku"
- VICTORY_POINTS_14709:0 "name 1"
- VICTORY_POINTS_14721:0 "name 2" 
- VICTORY_POINTS_14747:0 "name 3"
- VICTORY_POINTS_14799:0 "name 4"
- VICTORY_POINTS_14740:0 "name 5"
+ VICTORY_POINTS_14709:0 "Hanawenui'i"
+ VICTORY_POINTS_14721:0 "Manta'ata" 
+ VICTORY_POINTS_14747:0 "Poko'ai"
+ VICTORY_POINTS_14799:0 "Inufarato"
+ VICTORY_POINTS_14740:0 "Samiatofo"
  
  #Atlantis and Co
  VICTORY_POINTS_15488:0 "Altenín"
