Heavy tank prj descs

--- a/localisation/aml_tech_l_english.yml
+++ b/localisation/aml_tech_l_english.yml
@@ -905,7 +905,7 @@
  PRJ_medium_tank_destroyer_equipment_2_desc:0 "The Mea/11-Ban was was a tank destroyer project. Never built for lack of need, and is only known from blueprints."
  PRJ_medium_tank_aa_equipment_2:0 "Metasnwa 11 - Kar-Hotwana"
  PRJ_medium_tank_aa_equipment_2_short:0 "Mea/11-Kna"
- PRJ_medium_tank_aa_equipment_2_desc:0 "Two 40mm cannons fitted in a rotating partially protected turret mounted over a Mea/4-Kna chassis."
+ PRJ_medium_tank_aa_equipment_2_desc:0 "Two 40mm cannons fitted in a rotating partially protected turret mounted over a Mea/11-Kna chassis."
  PRJ_medium_tank_equipment_3:0 "Metasnwa 22 - Tekula"
  PRJ_medium_tank_equipment_3_short:0 "Tekula"
  PRJ_medium_tank_equipment_3_desc:0 "The Tekula and its prototypes were the upgraded versions of the Gutochi. Due to increasing material shortages and the subsequent armistace ment that it never got to see the light of day."
@@ -917,55 +917,19 @@
  PRJ_medium_tank_destroyer_equipment_3_desc:0 "The Mea/22-Ban was a tank destroyer project. Never built, and is only known from blueprints."
  PRJ_medium_tank_aa_equipment_3:0 "Metasnwa 22 - Kar-Hotwana"
  PRJ_medium_tank_aa_equipment_3_short:0 "Mea/22-Kna"
- PRJ_medium_tank_aa_equipment_3_desc:0 "The Mea/22-Ban" was an experimental anti-air vehicle built from theTekula's chassis. It never underwent mass production, due to continuous Material shortages."
- PRJ_heavy_tank_equipment_1:0 "Gudarturak 023-Haaganitlepoliserade"
- PRJ_heavy_tank_equipment_1_short:0 "Gud/023-Hag"
- PRJ_heavy_tank_equipment_1_desc:0 "Produced from 1937 to 1941, this archaic design was Atlantis' choice for an armored vehicle to support its infantry battalions, as the new doctrine demanded. Ironically, for such a key vehicle in the army's doctrine, it never saw action, due to the fact that Atlantis had more modern tanks by the time the D-Day took place. Most were sold out to third-world nations."
- PRJ_heavy_tank_artillery_equipment_1:0 "Gudarturak 023-Hakanonrade"
- PRJ_heavy_tank_artillery_equipment_1_short:0 "Gud/023-Hk"
- PRJ_heavy_tank_artillery_equipment_1_desc:0 "A conversion of the original tank, fitted with an artillery cannon and a large ammo container below."
- PRJ_heavy_tank_destroyer_equipment_1:0 "Gudarturak 023-Hasexkiuxpanŧerade"
- PRJ_heavy_tank_destroyer_equipment_1_short:0 "Gud/023-Hskp"
- PRJ_heavy_tank_destroyer_equipment_1_desc:0 "The Gud/023-Hskp was armed with a 75mm gun mounted in a fully rotating mantlet. Never passed its prototype stage."
- PRJ_heavy_tank_aa_equipment_1:0 "Gudarturak 023-Hasexkiuxéirpleinade"
- PRJ_heavy_tank_aa_equipment_1_short:0 "Gud/023-Hské"
- PRJ_heavy_tank_aa_equipment_1_desc:0 "An anti-air cannon mounted on the chassis of a Gud/023-Hag tank."
- PRJ_heavy_tank_equipment_2:0 "Juzatzhait 323-Aŧehedeko-Kóakak"
- PRJ_heavy_tank_equipment_2_short:0 "Juz/323-Az-K"
- PRJ_heavy_tank_equipment_2_desc:0 "The Juz/323-Az-K was a 50 ton tank meant to bring Atlantis to the edge of armored warfare. Although having seen limited usage and production, the designing process of the tank changed the course of its manufacturer, Juzatzhait. Many of its innovations were later used in the company's flagship vehicle, the Juz/801-Aħz."
- PRJ_heavy_tank_artillery_equipment_2:0 "Juzatzhait 323-Hakanonrade"
- PRJ_heavy_tank_artillery_equipment_2_short:0 "Juz/323-Hk"
- PRJ_heavy_tank_artillery_equipment_2_desc:0 "An artillery cannon fitted inside an open-top casemate."
- PRJ_heavy_tank_destroyer_equipment_2:0 "Juzatzhait 323-Hasexkiuxpanŧerade"
- PRJ_heavy_tank_destroyer_equipment_2_short:0 "Juz/323-Hskp"
- PRJ_heavy_tank_destroyer_equipment_2_desc:0 "Unlike earlier designs, the Juz/323-Hskp tank destroyer had a completely enclosed crew compartment and a very tough frontal armor."
- PRJ_heavy_tank_aa_equipment_2:0 "Juzatzhait 323-Haéirsexpleinrade"
- PRJ_heavy_tank_aa_equipment_2_short:0 "Juz/323-Hés"
- PRJ_heavy_tank_aa_equipment_2_desc:0 "Meant to support advancing troops, the heavily armored Juz/323-Hés could withstand heavy fire from aircraft, and was also used to destroy soft targets on the ground."
- PRJ_heavy_tank_equipment_3:0 "Gudarturak 423-Aŧehedeko-Kóakak"
- PRJ_heavy_tank_equipment_3_short:0 "Gud/423-Az-K"
- PRJ_heavy_tank_equipment_3_desc:0 "The last heavy tank of the Atlantean Army, and also the only one to see extensive use. It was used in conjunction with its lighter counterpart, the Juz/801-Aħz. Although almost impenetrable from the front and possessing a large firepower, its low mobility spelled doom on the iconic tank, after the Atlantean command switched its doctrine to favor mobility and versatility over raw power."
- PRJ_heavy_tank_artillery_equipment_3:0 "Gudarturak 423-Habamħutekberade-Kóakak"
- PRJ_heavy_tank_artillery_equipment_3_short:0 "Gud/423-Hbħ"
- PRJ_heavy_tank_artillery_equipment_3_desc:0 "The Gud/423-Hbħ was a heavy siege howitzer meant to haul huge shells in high trajectories, at the expense of accuracy. Saw limited use in both Germany and France in 1944 through the end of the war, with some success."
- PRJ_heavy_tank_destroyer_equipment_3:0 "Gudarturak 423-Hasexkiuxpanŧerade"
- PRJ_heavy_tank_destroyer_equipment_3_short:0 "Gud/423-Hskp"
- PRJ_heavy_tank_destroyer_equipment_3_desc:0 "The Gud/423-Hskp was a prototype of a tank destroyer based on the Gud/423-Az-K tank. Never saw mass production."
- PRJ_heavy_tank_aa_equipment_3:0 "Gudarturak 423-Haéirsexpleinrade"
- PRJ_heavy_tank_aa_equipment_3_short:0 "Gud/423-Hés"
- PRJ_heavy_tank_aa_equipment_3_desc:0 "Inheriting the heavy chassis of the Gud/423-Az-K, this anti-air vehicle defended the ground forces against German aircraft, earning it a good reputation."
- PRJ_super_heavy_tank_equipment_1:0 "Gudarturak 099-Ŧerseraganax"
- PRJ_super_heavy_tank_equipment_1_short:0 "Gud/099-Ŧs"
- PRJ_super_heavy_tank_equipment_1_desc:0 "The pinnacle of the Atlantean obsession with large tanks, the Ŧerseraganax was meant to spearhead assaults against heavily fortified positions. Four were produced in total, but none saw action due to being too heavy and large for the current ships to load and unload."
- PRJ_super_heavy_tank_artillery_equipment_1:0 "Gudarturak 099-Hakanonrade-Kóakak"
- PRJ_super_heavy_tank_artillery_equipment_1_short:0 "Gud/099-Hk-K"
- PRJ_super_heavy_tank_artillery_equipment_1_desc:0 "Meant to carry a 230mm naval cannon, a few of them were envisioned as being the equivalent of bringing a battleship to give support fire. One vehicle partially completed."
- PRJ_super_heavy_tank_destroyer_equipment_1:0 "Gudarturak 099-Ŧerseraganax-2"
- PRJ_super_heavy_tank_destroyer_equipment_1_short:0 "Gud/099-Ŧs-2"
- PRJ_super_heavy_tank_destroyer_equipment_1_desc:0 "The Gud/099-Ŧs-2 Land Battleship, but with a modified naval cannon and and a more spacious turret. Never left the blueprints."
- PRJ_super_heavy_tank_aa_equipment_1:0 "Gudarturak 099-Haéirsexpleinrade"
- PRJ_super_heavy_tank_aa_equipment_1_short:0 "Gud/099-Hés"
- PRJ_super_heavy_tank_aa_equipment_1_desc:0 "The Gud/099-Hés was a proposal to make a large anti-air mobile station, which featured a modified destroyer turret. Never left the blueprints."
+ PRJ_medium_tank_aa_equipment_3_desc:0 "The Mea/22-Kna" was an experimental anti-air vehicle built from the Tekula's chassis. It never underwent mass production, due to continuous Material shortages."
+ PRJ_heavy_tank_equipment_1:0 "Hamanulsa 3 - Adanyi "
+ PRJ_heavy_tank_equipment_1_short:0 Adanyi"
+ PRJ_heavy_tank_equipment_1_desc:0 "Designed in 1940, the Hamanulsa and its prototypes showed what was possible if given the chnce, Due to the abysmal infrastructure conditions throughout the rest of africa ment it would never see front line combat and its compenents melted down and used for materials in the war effort.
+ PRJ_heavy_tank_artillery_equipment_1:0 "Hamanulsa 3 - Tigardy Axiqan"
+ PRJ_heavy_tank_artillery_equipment_1_short:0 "Ham/3-Yam"
+ PRJ_heavy_tank_artillery_equipment_1_desc:0 "The Ham/3-Yam was a heavy tank artillery  project. Never built, and is only known from blueprints." 
+ PRJ_heavy_tank_destroyer_equipment_1:0 "Hamanulsa 3 - Bumietya Axiqan"
+ PRJ_heavy_tank_destroyer_equipment_1_short:0 "Ham/3-Bam"
+ PRJ_heavy_tank_destroyer_equipment_1_desc:0 "The Ham/3-Ban was a heavy tank destroyer project. Never built, and is only known from blueprints."
+ PRJ_heavy_tank_aa_equipment_1:0 "Hamanulsa 3 - Kar-Hotwana"
+ PRJ_heavy_tank_aa_equipment_1_short:0 "Ham/3-Kna"
+ PRJ_heavy_tank_aa_equipment_1_desc:0 The Ham/3-Ban was a heavy tank Anti-Air project. Never built, and is only known from blueprints."
  PRJ_modern_tank_equipment_1:0 "Juzatzhait-Wotarnial 1001-Atħaŧehedeko"
  PRJ_modern_tank_equipment_1_short:0 "Juz-Wot/1001-Aħz"
  PRJ_modern_tank_equipment_1_desc:0 "After the success of the Juz/801-Aħz, the Atlantean army decided to move to medium multipurpose tanks. This tank was a joint venture of the prestigious Juzatzhait Inc. and the Wotarnial General Systems, to produce a universal tank to fit many different roles. Saw limited action in the Cold War, and was generally liked by its users."
