--- a/localisation/replace/aml_loading_tips_l_english.yml
+++ b/localisation/replace/aml_loading_tips_l_english.yml
@@ -75,3 +75,4 @@
  LOADING_TIP_75:0 "\"I don't think the Trinsuyinese get it; they can't leave now. Do they really think that we would let them escape?\"\n - Admiral Frank Jack Fletcher, US 2nd Battle of Midway"
  LOADING_TIP_76:0 "\"Every one of the great powers will continue to expand until its reach is greater than its grip.\"\n -Victor Ceñiza de Espinoza, Rio Grandense Congressman"
  LOADING_TIP_77:0 "\"America is an economic engine and Japan has just given them the spark to start it. Let us hope that the engine will crush the enemies of the people soon.\"\n - Unnamed Official in the Houpo'ean Communist Party"
+ LOADING_TIP_78:0 "\"I’m not sure what shocks me more, the fact the Germans hit our island or the fact our air force couldn’t do anything about it.\"\n - Atlantean President Avaskanta Carras"
